--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
+    "class-variance-authority": "^0.7.1",
     "cobe": "^0.6.4",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
